# NIMPU6050

./: CMakeLists.txt  mpu6050.nimble  sdkconfig
main/: main.nim
main/nimcache/: @m..@s..@s..@s..@s..@s.choosenim@stoolchains@snim-1.6.12@slib@spure@scollections@ssequtils.nim.c  @m..@s..@s..@s..@s..@s.choosenim@stoolchains@snim-1.6.12@slib@spure@smath.nim.c  @m..@s..@s..@s..@s..@s.choosenim@stoolchains@snim-1.6.12@slib@sstd@sprivate@sdigitsutils.nim.c  @m..@s..@s..@s..@s..@s.choosenim@stoolchains@snim-1.6.12@slib@ssystem.nim.c  @m..@s..@s..@s..@s..@s.choosenim@stoolchains@snim-1.6.12@slib@ssystem@sdollars.nim.c  @m..@s..@s..@s..@s..@s.choosenim@stoolchains@snim-1.6.12@slib@ssystem@sformatfloat.nim.c  @m..@s..@s..@s..@s..@s.choosenim@stoolchains@snim-1.6.12@slib@ssystem@sio.nim.c  @m..@s..@s..@s..@s..@s.nimble@spkgs2@snesper-0.6.1-1678fa54fffdd902a738b06dfb6bdabbfd2353c8@snesper@sesp-idf-lib@si2cdev_utils.nim.c  @m..@s..@s..@s..@s..@s.nimble@spkgs2@snesper-0.6.1-1678fa54fffdd902a738b06dfb6bdabbfd2353c8@snesper@sesp@sdriver@sgpio_driver.nim.c  @m..@s..@s..@s..@s..@s.nimble@spkgs2@snesper-0.6.1-1678fa54fffdd902a738b06dfb6bdabbfd2353c8@snesper@sgeneral.nim.c  @m..@s..@s..@s..@s..@s.nimble@spkgs2@snesper-0.6.1-1678fa54fffdd902a738b06dfb6bdabbfd2353c8@snesper@si2cs.nim.c  @m..@s..@s..@s..@s..@s.nimble@spkgs2@snesper-0.6.1-1678fa54fffdd902a738b06dfb6bdabbfd2353c8@snesper@stimers.nim.c  @m..@s..@s..@s..@s..@s.nimble@spkgs@snesper-@hdevel@snesper@sesp-idf-lib@si2cdev_utils.nim.c  @m..@s..@s..@s..@s..@snim-1.9.3@snim@slib@spure@smath.nim.c  (+31 more)
src/: mpu6050.nim
tests/: test1.nim
(+3 files in other folders)
